--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -8,7 +8,8 @@ $sizes: (
 
 $colors: (
 	blue: #256FE4,
-	blue-sky: rgba(37, 111, 228, 0.29),
+	blue-sky: rgba(37, 111, 228, 0.12),
+	grey: #4A4A4A,
 	shadow-black: rgba(0, 0, 0, 0.50),
 	white: #fff,
 );
