feat(Resume): Added skills section

--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -1,12 +1,13 @@
 $sizes: (
 	very-big: 2.750em,
 	big: 2.250em,
-	large: 1500em,
+	large: 1.500em,
 	medium: 1.125em,
 	small: 0.875em,
 );
 
 $colors: (
+	black: #000,
 	blue: #256FE4,
 	blue-sky: rgba(37, 111, 228, 0.12),
 	grey: #4A4A4A,
