feat(Resume): Added timeline section

--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -1,6 +1,7 @@
 $fonts: (
 	black: 'Roboto-Black',
 	medium: 'Roboto-Medium',
+	light: 'Roboto-Light',
 );
 
 $sizes: (
@@ -14,7 +15,7 @@ $sizes: (
 $colors: (
 	black: #000,
 	blue: #256FE4,
-	blue-sky: rgba(37, 111, 228, 0.12),
+	blue-sky: rgba(37, 111, 228, 0.1),
 	grey: #4A4A4A,
 	shadow-black: rgba(0, 0, 0, 0.50),
 	white: #fff,
